[gd_scene load_steps=9 format=3 uid="uid://bmulb0ma2si2s"]

[ext_resource type="Script" path="res://card/projectiles/burger_bullet.gd" id="1_ra87h"]
[ext_resource type="Texture2D" uid="uid://b7rv26fqginpx" path="res://assets/tower_projectiles/Burger.png" id="2_80780"]
[ext_resource type="PackedScene" uid="uid://brkqxkg4ytilp" path="res://components/bullet_smoke.tscn" id="3_quvu1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_177e0"]
radius = 11.0454

[sub_resource type="Animation" id="Animation_2wg33"]
resource_name = "Explode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BulletSmoke:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1nx3y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BulletSmoke:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wm6kb"]
resource_name = "Rotate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletSmoke:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(0, -43), Vector2(0, -71), Vector2(0, -91), Vector2(0, -103), Vector2(0, -107), Vector2(0, -103), Vector2(0, -91), Vector2(0, -71), Vector2(0, -43), Vector2(0, -7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 7.85398]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r64j5"]
_data = {
"Explode": SubResource("Animation_2wg33"),
"RESET": SubResource("Animation_1nx3y"),
"Rotate": SubResource("Animation_wm6kb")
}

[node name="BurgerBullet" type="Node2D"]
z_index = 50
scale = Vector2(2.5, 2.5)
script = ExtResource("1_ra87h")
speed = 600.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_80780")
offset = Vector2(0, -7)

[node name="HitDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector"]
shape = SubResource("CircleShape2D_177e0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 3.0
libraries = {
"": SubResource("AnimationLibrary_r64j5")
}

[node name="BulletSmoke" parent="." instance=ExtResource("3_quvu1")]

[connection signal="area_entered" from="HitDetector" to="." method="_on_hit_detector_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
